--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tenzor",
   "version": "1.0.0",
   "description": "Репозиторий для тестовых заданий",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lex10000/tenzor#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "json-server": "^0.12.1"
   }
 }
