--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/lex10000/tenzor#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "json-server": "^0.12.1"
-  }
+    "json-server": "^0.16.1"
+  },
+  "devDependencies": {}
 }
